wrote first set of mongo integration tests. select statement now returns NamedValues mongo kamerasample setup now empties database before adding test data